Send Notification event (#33)
* Send Notification event

* Add notificationType to notification

* Stop sending ActivityChangedNotification event