@@ -3,7 +3,7 @@ package ovh.equino.actracker.repository.jpa.outbox;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Root;
-import ovh.equino.actracker.notification.outbox.Notification;
+import ovh.equino.actracker.domain.Notification;
 import ovh.equino.actracker.notification.outbox.NotificationsOutboxRepository;
 import ovh.equino.actracker.repository.jpa.JpaRepository;
 
@@ -11,18 +11,20 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import static java.util.stream.Collectors.toList;
+
 class JpaNotificationsOutboxRepository extends JpaRepository implements NotificationsOutboxRepository {
 
     private final NotificationMapper notificationMapper = new NotificationMapper();
 
     @Override
-    public void save(Notification notification) {
+    public void save(Notification<?> notification) {
         NotificationEntity notificationEntity = notificationMapper.toEntity(notification);
         entityManager.merge(notificationEntity);
     }
 
     @Override
-    public List<Notification> getPage(int limit) {
+    public List<Notification<?>> getPage(int limit) {
         CriteriaBuilder criteriaBuilder = entityManager.getCriteriaBuilder();
         CriteriaQuery<NotificationEntity> criteriaQuery = criteriaBuilder.createQuery(NotificationEntity.class);
         Root<NotificationEntity> rootEntity = criteriaQuery.from(NotificationEntity.class);
@@ -35,11 +37,11 @@ class JpaNotificationsOutboxRepository extends JpaRepository implements Notifica
                 .getResultList()
                 .stream()
                 .map(notificationMapper::toDto)
-                .toList();
+                .collect(toList());
     }
 
     @Override
-    public Optional<Notification> findById(UUID notificationId) {
+    public Optional<Notification<?>> findById(UUID notificationId) {
         NotificationEntity notificationEntity = entityManager.find(NotificationEntity.class, notificationId.toString());
         entityManager.detach(notificationEntity);
         return Optional.ofNullable(notificationEntity)
